--- a/app/views/match_invitations/edit.html.erb
+++ b/app/views/match_invitations/edit.html.erb
@@ -1,144 +1,117 @@
 <div id="narrow_right_content">
   <div class="sect">
-  <h2>邀请概要</h2>
-    <table class="form">
-      <tr><td style="width:50px">
-        发起队
-      </td><td>
-        <%= small_team_image_link @host_team, :style=>"float:left;margin-right:10px"%>
-        <br/>
-        <span><%=link_to h(@host_team.shortname), team_view_path(@host_team.id)%></span>
-      </td></tr>
-      <tr ><td style="width:50px">
-        受邀队
-      </td><td>
-        <%= small_team_image_link @guest_team, :style=>"float:left;margin-right:10px"%>
-        <br/>
-        <span><%=link_to h(@guest_team.shortname), team_view_path(@guest_team.id)%></span>
-      </td></tr>
-      <tr>
-        <td style="width:50px">状态</td>
-        <td>
-          <%=link_to h(@another_team.shortname), team_view_path(@another_team.id)%>修改了比赛邀请，正等待我队回复
-        </td>
-      </tr>
-      <%msg = @match_invitation.edit_by_host_team ? @match_invitation.guest_team_message: @match_invitation.host_team_message%>
-      <%if !msg.blank?%>
-      <tr>
-        <td style="width:50px">对方留言</td>
-        <td>
-          
-          <%= h msg%>
-        </td>
-      </tr>
-      <%end%>
-    </table>
-  </div>
-  <div class="sect">
     <h2></h2>
     <%=render :partial=>'sidebar_menu'%>
   </div>
 </div>
 
 <div id="wide_left_content">
-  
   <div class="sect">
-  <h2>修改比赛邀请</h2>
+  <h2><%=h @title%></h2>
+  <table>
+    <tr>
+      <td><%= team_icon(@another_team)%></td>
+      <td style="width:100%">
+        <table class="match_invitation_list">
+          <tr>
+            <td>
+              <%= @host_team == @team ? '本队' : '对方'%>
+              <%=link_to h(@host_team.shortname), team_view_path(@host_team)%>发起的邀请
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <%=link_to h(@another_team.shortname), team_view_path(@another_team)%>提出建议后，等待我队的回复
+            </td>
+          </tr>
+          <%msg = @team == @host_team ? @unmodified_match_invitation.guest_team_message: @unmodified_match_invitation.host_team_message%>
+          <%if !msg.blank?%>
+          <tr>
+            <td>
+              对方的留言: 
+              <%= h(msg)%>
+            </td>
+          </tr>
+          <%end%>
+        </table>
+        <br/>
+      </td>
+      <td><%= team_icon(@self_team)%></td>
+    </tr>
+  </table>
+  <br/>
+  <br/>
   <%= error_messages_for :match_invitation %>
 
   <% form_for @match_invitation do |f| %>
     <%= f.hidden_field :guest_team_id,  :value=>@guest_team.id%>
     <%= f.hidden_field :host_team_id,  :value=>@host_team.id%>
-    <table class="form">
-      <tr><td>
-        开始时间:
-      </td><td>
-        <%= f.datetime_select :new_start_time,  :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 %>
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:start_time)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.start_time.strftime('%Y-%m-%d %H:%M') %></div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        地点:
-      </td><td>
-        <%= f.text_field :new_location %>
-      </td><td>
-        <%if !@match_invitation.location.blank? && @match_invitation.has_attribute_been_modified?(:location)%>
-          <div class="conflict">我队上次的设定是: <%=h @match_invitation.location %></div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        比赛性质:
-      </td><td>
-        <%= f.select :new_match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]} %>
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:match_type)%>
-          <div class="conflict">我队上次的设定是: <%= match_type_text @match_invitation.match_type %></div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        人数:
-      </td><td>
-        <%= f.select :new_size, MatchInvitation::MATCH_SIZES %>人制
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:size)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.size %>人制</div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        半场时间:
-      </td><td>
-        <%= f.text_field :new_half_match_length, :size=>1 %>分钟
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:half_match_length)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.half_match_length %>分钟</div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        中场休息:
-      </td><td>
-        <%= f.text_field :new_rest_length, :size=>1 %>分钟
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:rest_length)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.rest_length %>分钟</div>
-        <%end%>
-      <tr><td>
-        是否有裁判:
-      </td><td>
-        <%= f.check_box :new_has_judge %>
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:has_judge)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.has_judge ? '有' : '没有'%>裁判</div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        是否有红黄牌:
-      </td><td>
-        <%= f.check_box :new_has_card %>
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:has_card)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.has_card ? '有' : '没有'%>红黄牌</div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        是否有越位:
-      </td><td>
-        <%= f.check_box :new_has_offside %>
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:has_offside)%>
-          <div class="conflict">我队上次的设定是: <%= @match_invitation.has_offside ? '有' : '没有'%>越位</div>
-        <%end%>
-      </td></tr>
-      <tr><td>
-        常规时间平局后:
-      </td><td>
-        <%= f.select :new_win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]} %>
-      </td><td>
-        <%if @match_invitation.has_attribute_been_modified?(:win_rule)%>
-          <div class="conflict">我队上次的设定是: <%=win_rule_text @match_invitation.win_rule%></div>
-        <%end%>
-      </td></tr>
+    <table class="form match_invitation_list">
+      <tr>
+        <td style="width:60px">&nbsp;</td>
+        <td>提出新建议</td>
+        <td>对方提出的建议</td>
+        <td>我队上次提出的建议</td>
+      </tr>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '时间', :start_time, 
+        Proc.new{ |t| 
+              %(#{t.strftime('%Y-%m-%d %H:%M')}
+                #{"(已过期)" if @unmodified_match_invitation.outdated?}
+              )
+          }, 
+        Proc.new{ f.datetime_select :new_start_time, 
+          :start_year => Date.today.year, :end_year => 1.year.since.year, :use_month_numbers => true, :minute_step=>15 })
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '地点', :location, 
+        Proc.new{ |t| h t}, 
+        Proc.new{ f.text_field :new_location })
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '比赛性质', :match_type, 
+        Proc.new{ |t| match_type_text t}, 
+        Proc.new{ f.select :new_match_type, MatchInvitation::MATCH_TYPES.map {|t| [match_type_text(t), t]}})
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '人数', :size, 
+        Proc.new{ |t| "#{t}人制"}, 
+        Proc.new{
+          "#{f.select :new_size, MatchInvitation::MATCH_SIZES}人制"
+        })
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '半场时间', :half_match_length, 
+        Proc.new{ |t| "#{t}分钟"}, 
+        Proc.new{ "#{f.text_field :new_half_match_length, :size=>1}分钟"})
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '中场休息', :rest_length, 
+        Proc.new{ |t| "#{t}分钟"}, 
+        Proc.new{ "#{f.text_field :new_rest_length, :size=>1}分钟"})
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '裁判', :has_judge, 
+        Proc.new{ |t| t ? '有' : '没有'}, 
+        Proc.new {
+          %(
+            #{f.radio_button :new_has_judge, true}有
+            #{f.radio_button :new_has_judge, false}没有
+        )})
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '红黄牌', :has_card, 
+        Proc.new{ |t| t ? '有' : '没有'}, 
+        Proc.new{
+          %(
+            #{f.radio_button :new_has_card, true}有
+            #{f.radio_button :new_has_card, false}没有
+        )})
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '越位', :has_offside, 
+        Proc.new{ |t| t ? '有' : '没有'}, 
+        Proc.new{
+          %(
+            #{f.radio_button :new_has_offside, true}有
+            #{f.radio_button :new_has_offside, false}没有
+        )})
+      %>
+      <%= macth_invitation_comparison_form_tr(@unmodified_match_invitation, '平局后', :win_rule, 
+        Proc.new{ |t| win_rule_text t}, 
+        Proc.new{ f.select :new_win_rule, MatchInvitation::WIN_RULES.map {|r| [win_rule_text(r), r]}})
+      %>
     </table>
 
     <p>
@@ -148,7 +121,7 @@
 
     <p>
       给对方管理员的留言<br />
-      <%if @match_invitation.edit_by_host_team%>
+      <%if @unmodified_match_invitation.edit_by_host_team%>
         <%= f.text_area :host_team_message, :value=>'', :cols => 40, :rows => 3 %>
       <%else%>
         <%= f.text_area :guest_team_message, :value=>'',  :cols => 40, :rows => 3 %>
@@ -156,7 +129,7 @@
     </p>
 
     <p>
-      <%= f.submit "协商" %>
+      <%= f.submit "提出新建议" %>
     </p>
   <% end %>
   </div>
