--- a/app/views/users/forgot_password.erb
+++ b/app/views/users/forgot_password.erb
@@ -1,10 +1,13 @@
-<%= error_messages_for :user %>
+<div id="wide_left_content" class="sect">
+  <h2>忘记密码</h2>
+  <%= error_messages_for :user %>
 
-<% form_for :user do |f| %>
-  <p>请填写您帐户的邮箱</p>
+  <% form_for :user do |f| %>
+    <p><label for="login">你的邮箱</label><br/>
+    <%= f.text_field :login %></p>
 
-  <p><label for="login">邮箱</label><br/>
-  <%= f.text_field :login %></p>
+    <p><%= submit_tag '发送密码重置邮件' %></p>
+  <% end %>
+</div>
 
-  <p><%= submit_tag '提交' %></p>
-<% end %>
+<div class="clearBoth"></div>
