--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,19 @@
-<%= error_messages_for :user %>
-<% form_for :user, :url => users_path do |f| -%>
+<div id="wide_left_content" class="sect">
+  <h2>注册我的WeFootball帐号</h2>
+  <%= error_messages_for :user %>
+  <% form_for :user, :url => users_path do |f| -%>
 
-<p><label for="email">Email</label><br/>
-<%= f.text_field :login %></p>
+  <p><label for="email">你的邮箱</label><br/>
+  <%= f.text_field :login %></p>
 
-<p><label for="password">Password</label><br/>
-<%= f.password_field :password %></p>
+  <p><label for="password">密码</label><br/>
+  <%= f.password_field :password %></p>
 
-<p><label for="password_confirmation">Confirm Password</label><br/>
-<%= f.password_field :password_confirmation %></p>
+  <p><label for="password_confirmation">确认密码</label><br/>
+  <%= f.password_field :password_confirmation %></p>
 
-<p><%= submit_tag 'Sign up' %></p>
-<% end -%>
+  <p><%= submit_tag '注册' %></p>
+  <% end -%>
+</div>
+
+<div class="clearBoth"></div>
