--- a/app/views/users/reset_password.erb
+++ b/app/views/users/reset_password.erb
@@ -1,13 +1,16 @@
-<%= error_messages_for :user %>
+<div id="wide_left_content" class="sect">
+  <h2>重设<%=h @user.login %>的密码：</h2>
 
-<% form_for :user do |f| %>
-  <p>请为<%= @user.login %>设定新密码：</p>
+  <%= error_messages_for :user %>
+  <% form_for :user do |f| %>
+    <p><label for="password">密码</label><br/>
+    <%= f.password_field :password %></p>
 
-  <p><label for="password">密码</label><br/>
-  <%= f.password_field :password %></p>
+    <p><label for="password_confirmation">确认密码</label><br/>
+    <%= f.password_field :password_confirmation %></p>
 
-  <p><label for="password_confirmation">再次确认密码</label><br/>
-  <%= f.password_field :password_confirmation %></p>
+    <p><%= submit_tag '提交' %></p>
+  <% end %>
+</div>
 
-  <p><%= submit_tag '提交' %></p>
-<% end %>
+<div class="clearBoth"></div>
