--- a/app/views/matches/_team_in_match.erb
+++ b/app/views/matches/_team_in_match.erb
@@ -12,10 +12,12 @@
       <%=link_to "取消比赛", match_path(@match), :method => :delete, :confirm => '真的要取消这场比赛吗？' %>
       <br/><br/>
     <%end%>
-    <%=link_to "代表该队参赛", 
-        match_joins_path(:team_id => team, :match_id => @match), :method=>:post if @match.can_be_joined_by?(current_user, team)%>
-    <%=link_to "不代表该队参赛", 
-        match_join_path(user_mj), :method=>:delete if @match.can_be_quited_by?(current_user, team)%>
+    <%links = []%>
+    <%links << link_to("代表该队参赛", 
+        match_joins_path(:team_id => team, :match_id => @match), :method=>:post) if @match.can_be_joined_by?(current_user, team)%>
+    <%links << link_to("不代表该队参赛", 
+        match_join_path(0, :team_id => team, :match_id => @match), :method=>:delete) if @match.can_be_quited_by?(current_user, team)%>
+    <%= links_with_sticks links%>
   <%end%>
   <div class="clearBoth"></div>
 </div>
@@ -74,9 +76,9 @@
   <h2><%=h team.shortname%>下的讨论</h2>
   <%= render :partial=>'posts/post_list', :object=>posts%>
   <div style="margin: 10px 0  0 10px;float:right;">
-    <%if logged_in? && current_user.is_team_member_of?(team)%>
-      > <%= link_to '针对本场比赛发言', new_match_team_post_path(@match, team) %>
-    <%end%>
-    > <%= link_to '更多', match_team_posts_path(@match, team) %>
+    <%links = []%>
+    <%links << "> #{link_to '针对本场比赛发言', new_match_team_post_path(@match, team)}" if logged_in? && current_user.is_team_member_of?(team)%>
+    <%links << "> #{link_to '更多',  match_team_posts_path(@match, team)}"%>
+    <%= links_with_sticks links%>
   </div>
 </div>
