--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -5,12 +5,13 @@
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, activity.football_ground_id %>
     <br/><br/>
+    <%links = []%>
     <%if logged_in? && (!@user || @user == current_user)%>
-      <%=link_to_if(activity.can_be_joined_by?(current_user), '我去', training_training_joins_path(activity), :method=>'post'){} %>
-      <%=link_to_if(activity.can_be_quited_by?(current_user), '我不去', training_training_join_path(activity, 0), :method=>'delete'){} %>
-      &nbsp;&nbsp;|&nbsp;&nbsp;
+      <%links << link_to('我去', training_training_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user) %>
+      <%links << link_to('我不去', training_training_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user) %>
     <%end%>
-    <%=link_to '详情', training_path(activity)%>
+    <%links << link_to('详情', training_path(activity))%>
+    <%= links_with_sticks links%>
   </div>
   <div class="training_icon">
     <%= small_team_image_link activity.team %>
@@ -24,7 +25,7 @@
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, nil%>
     <br/><br/>
-    <%=link_to '详情', match_path(activity)%>
+    <%= link_to('详情', match_path(activity))%>  
   </div>
   <div class="match_icon">
     <%= small_team_image_link activity.host_team %> V.S.
@@ -35,7 +36,7 @@
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>
     去<%= link_to_if !activity.football_ground_id.nil?, h(activity.location), football_ground_path(activity.football_ground_id)%>随便踢踢
     <br/><br/>
-    <%if logged_in? %>
+    <%if logged_in? && (!@user || @user == current_user) %>
       <%= play_status_with_logged_in(activity,current_user) %>
       <br/><br/>
       <%=link_to_if(activity.can_be_joined_by?(current_user),'我也要去', play_play_joins_path(activity), :method=>'post') {}%>
