--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -76,18 +76,20 @@
       </div>
 
       <div style="margin: 10px 0 0 10px">
+        <%links = []%>
         <%if logged_in? %>
           <%if @can_quit%>
-            <%= link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
+            <%links << link_to("退出球队", team_join_path(@user_team.id),:method=>:delete)%>
           <%elsif @can_request%>
-            <%= link_to("申请加入球队", '#', 
+            <%links << link_to("申请加入球队", '#', 
                 :onclick=>'wefootball.openDialog(event, "#send_team_join_request_div");;return false;')%>
           <%end%>
           <%if current_user.is_team_admin_of?(@team)%>
-            <%= link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
+            <%links << link_to("邀请朋友加入", new_team_team_join_invitation_path(@team))%>
           <%end%>
-          <%=link_to("邀请该队进行比赛", new_match_invitation_path(:guest_team_id=>@team))%>
+          <%links << link_to("邀请该队进行比赛", new_match_invitation_path(:guest_team_id=>@team))%>
         <%end%>
+        <%= links_with_sticks links%>
       </div>
     </div>
 
@@ -114,10 +116,10 @@
     <h2><%=h @team.shortname%>下的讨论</h2>
     <%= render :partial=>'posts/narrow_post_list', :object=>@posts%>
     <div style="margin: 10px 0  0 10px;float:right;">
-      <%if logged_in? && current_user.is_team_member_of?(@team)%>
-        > <%= link_to '发言', new_team_post_path(@team) %>
-      <%end%>
-      > <%= link_to '更多', team_posts_path(@team) %>
+      <%links = []%>
+      <%links << "> #{link_to '发言', new_team_post_path(@team)}" if logged_in? && current_user.is_team_member_of?(@team)%>
+      <%links << "> #{link_to '更多', team_posts_path(@team)}"%>
+      <%= links_with_sticks links%>
     </div>
   </div>
 </div>
