--- a/app/views/layouts/_team_menu.html.erb
+++ b/app/views/layouts/_team_menu.html.erb
@@ -25,7 +25,7 @@
       <li><%= month_calendar_link('本月活动', Time.now, team)%></li>
       <%if is_admin%>
       <li><%= link_to("新建训练", new_team_training_path(team))%></li>
-      <li><%= link_to("新建比赛", '#')%></li>
+      <li><%= link_to("新建比赛", new_team_sided_match_path(team))%></li>
       <%end%>
       <li><%= link_to("比赛邀请", team_match_invitations_path(team))%></li>
     </ul>
